# nac-collector

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  README_catalyst_center.md  endpoints_fmc.yaml  endpoints_ise.yaml  endpoints_ise.yaml.example  endpoints_ndo.yaml.example  endpoints_sdwan.yaml.example  ise.json  ise.json.example  pyproject.toml
.github/workflows/: test.yml  update-endpoints.yml
nac_collector/: __init__.py  __main__.py  cisco_api_wrapper.py  cisco_client.py  cisco_client_catalystcenter.py  cisco_client_fmc.py  cisco_client_ise.py  cisco_client_meraki.py  cisco_client_ndo.py  cisco_client_sdwan.py  constants.py  endpoints_sdwan.yaml  github_repo_wrapper.py  main.py  onepassword_helper.py  utils.py
nac_collector/cli/: main.py  options.py
nac_collector/client/: __init__.py  base.py  client.py  ise.py  ndo.py  sdwan.py
nac_collector/controller/: base.py  catalystcenter.py  fmc.py  ise.py  meraki.py  ndfc.py  ndo.py  sdwan.py
nac_collector/device/: base.py
nac_collector/overrides/: fmc.yaml
nac_collector/resources/: catalystcenter_lookups.json
nac_collector/resources/endpoint_overrides/: catalystcenter.yaml  ise.yaml  meraki.yaml
nac_collector/resources/endpoints/: catalystcenter.yaml  fmc.yaml  ise.yaml  meraki.yaml  meraki_overrides.yaml  ndfc.yaml  sdwan.yaml
nac_collector/resources/lookups/: catalystcenter.yaml
scripts/: show_meraki_errors.py  update_endpoints.py
tests/: test_onepassword_helper.py
tests/client/: test_client.py
tests/ise/integration/: test_integration.py
tests/ise/integration/fixtures/: endpoints.yaml  ise.json
tests/unit/: test_catalystcenter_feature_templates.py  test_cisco_client_controller.py  test_cisco_client_device.py  test_cli_main.py
tests/unit/ise/: test_ers_api_pagination.py  test_id_field_child_collection.py
tests/unit/sdwan/: test_token_authentication.py
