[tool.poetry]
name = "nac-collector"
version = "0.1.0"
description = ""
authors = ["Kuba Mazurkiewicz <kmazurki@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
click = "^8.1.7"
gitpython = "^3.1.42"
ruamel-yaml = "^0.18.6"

[tool.poetry.scripts]
nac-collector = "nac_collector.main:cli"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^5.0.4"
isort = "^5.13.2"
mypy = "^1.10.0"
pre-commit = "^3.5"

[tool.isort]
# https://github.com/timothycrosley/isort
# https://github.com/timothycrosley/isort/wiki/isort-Settings
# splits long import on multiple lines indented by 4 spaces
force_grid_wrap = 0
include_trailing_comma = true
indent = "    "
line_length = 88
multi_line_output = 3
use_parentheses = true
# will group `import x` and `from x import` of the same module.
combine_as_imports = true
default_section = "THIRDPARTY"
force_sort_within_sections = true
forced_separate = "tests"
known_first_party = ["iac_validate", "tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


